# cupidcash

./: .env  Cargo.toml  Dockerfile  Jenkinsfile  docker-compose.yml
database/: db.sql
src/: api.rs  db.rs  main.rs  models.rs  utils.rs
src/api/: auth.rs  category.rs  discount_type.rs  image.rs  ingredient.rs  ingredient_usage.rs  item.rs  order.rs  purchashe.rs  role.rs  shop.rs  table.rs  user.rs
src/models/: category.rs  discount_type.rs  ingredient.rs  ingredient_usage.rs  item.rs  order.rs  purchase.rs  role.rs  shop.rs  table.rs  user.rs
src/template/: daily-sale-report.html
src/template/css/: style.css
src/utils/: fcm.rs  jwt.rs  socketio.rs  validator.rs
